--- a/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj.filters
+++ b/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="..\..\..\addons\ofxKinect\libs\libfreenect\src\cameras.c">
       <Filter>Addons</Filter>
     </ClCompile>
@@ -47,7 +46,11 @@
     <ClCompile Include="..\..\..\addons\ofxKinect\libs\libfreenect\src\usb_libusb10.c">
       <Filter>Addons</Filter>
     </ClCompile>
+    <ClCompile Include="src\FirstScene.cpp" />
+    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ReactiveSpaceApp.cpp" />
+    <ClCompile Include="src\IScene.cpp" />
+    <ClCompile Include="src\Particle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\addons\ofxOpenCv\libs\opencv\include\opencv2\flann\all_indices.h">
@@ -383,7 +386,9 @@
     <ClInclude Include="..\..\..\addons\ofxOpenCv\libs\opencv\include\opencv2\core\wimage.hpp">
       <Filter>Addons</Filter>
     </ClInclude>
+    <ClInclude Include="src\FirstScene.h" />
     <ClInclude Include="src\ReactiveSpaceApp.h" />
+    <ClInclude Include="src\IScene.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Addons">
