--- a/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj
+++ b/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj
@@ -91,9 +91,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GeoScene.cpp" />
     <ClCompile Include="src\GridScene.cpp" />
     <ClCompile Include="src\IScene.cpp" />
     <ClCompile Include="src\KinectManager.cpp" />
+    <ClCompile Include="src\LightScene.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="..\..\..\addons\ofxOpenCv\src\ofxCvColorImage.cpp" />
     <ClCompile Include="..\..\..\addons\ofxOpenCv\src\ofxCvContourFinder.cpp" />
@@ -103,6 +105,7 @@
     <ClCompile Include="..\..\..\addons\ofxOpenCv\src\ofxCvImage.cpp" />
     <ClCompile Include="..\..\..\addons\ofxOpenCv\src\ofxCvShortImage.cpp" />
     <ClCompile Include="src\Particle.cpp" />
+    <ClCompile Include="src\RainScene.cpp" />
     <ClCompile Include="src\ReactiveSpaceApp.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -199,9 +202,12 @@
     <ClInclude Include="..\..\..\addons\ofxOpenCv\libs\opencv\include\opencv2\video\background_segm.hpp" />
     <ClInclude Include="..\..\..\addons\ofxOpenCv\libs\opencv\include\opencv2\video\tracking.hpp" />
     <ClInclude Include="..\..\..\addons\ofxOpenCv\libs\opencv\include\opencv2\video\video.hpp" />
+    <ClInclude Include="src\GeoScene.h" />
     <ClInclude Include="src\GridScene.h" />
     <ClInclude Include="src\IScene.h" />
     <ClInclude Include="src\KinectManager.h" />
+    <ClInclude Include="src\LightScene.h" />
+    <ClInclude Include="src\RainScene.h" />
     <ClInclude Include="src\ReactiveSpaceApp.h" />
   </ItemGroup>
   <ItemGroup>
