--- a/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj.filters
+++ b/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj.filters
@@ -52,6 +52,12 @@
     <ClCompile Include="src\BirdParticle.cpp">
       <Filter>src\Particle Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Light.cpp">
+      <Filter>src\SceneItems</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HexagonParticle.cpp">
+      <Filter>src\Particle Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -128,6 +134,9 @@
     </Filter>
     <Filter Include="src\Particle Files">
       <UniqueIdentifier>{65a37be3-fdd6-4130-a900-a8586d78e264}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\SceneItems">
+      <UniqueIdentifier>{72a6e22e-40d7-4667-b28d-ff9ea4484c5e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -438,6 +447,12 @@
       <Filter>src\Particle Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ParticleMain.h">
+      <Filter>src\Particle Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Light.h">
+      <Filter>src\SceneItems</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HexagonParticle.h">
       <Filter>src\Particle Files</Filter>
     </ClInclude>
   </ItemGroup>
