GridScene is looking SA-WEET!

--- a/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj
+++ b/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj
@@ -49,6 +49,7 @@
     <OutDir>bin\</OutDir>
     <IntDir>obj\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(KINECTSDK10_DIR)\inc;$(KINECTSDK10_DIR)\lib\x86;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
