--- a/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj.filters
+++ b/Code/of_v0.8.0_vs_release/apps/myApps/ReactiveSpace/ReactiveSpace.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClCompile Include="src\GeoParticle.cpp">
       <Filter>src\Particle Files</Filter>
     </ClCompile>
+    <ClCompile Include="lightHands.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -467,6 +468,7 @@
     <ClInclude Include="src\GeoParticle.h">
       <Filter>src\Particle Files</Filter>
     </ClInclude>
+    <ClInclude Include="lightHands.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
